--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ djangorestframework = "^3.15.2"
 djangorestframework-simplejwt = "^5.3.1"
 django-cors-headers = "^4.4.0"
 whitenoise = "^6.7.0"
+gunicorn = "^23.0.0"
 
 
 [build-system]
