--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ djangorestframework-simplejwt = "^5.3.1"
 django-cors-headers = "^4.4.0"
 whitenoise = "^6.7.0"
 gunicorn = "^23.0.0"
+uvicorn = {extras = ["standard"], version = "^0.30.5"}
 
 
 [build-system]
