modify workflow, docker file and add debugging code in dev, prod file

--- a/.github/workflows/local-ci-cd.yml
+++ b/.github/workflows/local-ci-cd.yml
@@ -2,7 +2,7 @@ name: Local CI/CD
 on:
   push:
     branches:
-      - refactor/modularize
+      - refactor/settings-split
       
 jobs:
   deploy:
