change localhost into ngork url

--- a/react-frontend/.env.production
+++ b/react-frontend/.env.production
@@ -1,4 +1,7 @@
-VITE_API_URL=http://localhost:8080
-VITE_WS_URL=ws://localhost:8080
+NGROK_URL=f047-218-154-40-110.ngrok-free.app
+VITE_API_URL=https://f047-218-154-40-110.ngrok-free.app
+VITE_WS_URL=wss://f047-218-154-40-110.ngrok-free.app
+# VITE_API_URL=https://${NGROK_URL}
+# VITE_WS_URL=wss://${NGROK_URL}
 # VITE_API_URL=http://orderbot_backend:8000
 # VITE_WS_URL=ws://orderbot_backend:8000
