feat: Add ngrok URL update functionality
Added update_ngrok_url.py script that takes ngrok URL as input
and automatically modifies the relevant parts in the associated files.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    server_name localhost;
+    server_name https://71d2-59-15-64-225.ngrok-free.app;
 
     location / {
         root /usr/share/nginx/html;
