--- a/react-frontend/.env.production
+++ b/react-frontend/.env.production
@@ -1,7 +1,2 @@
-NGROK_URL=f047-218-154-40-110.ngrok-free.app
-VITE_API_URL=https://f047-218-154-40-110.ngrok-free.app
-VITE_WS_URL=wss://f047-218-154-40-110.ngrok-free.app
-# VITE_API_URL=https://${NGROK_URL}
-# VITE_WS_URL=wss://${NGROK_URL}
-# VITE_API_URL=http://orderbot_backend:8000
-# VITE_WS_URL=ws://orderbot_backend:8000
+VITE_API_URL=https://71d2-59-15-64-225.ngrok-free.app
+VITE_WS_URL=wss://71d2-59-15-64-225.ngrok-free.app
