modify to to use a single URL for both webhook and order bot services

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,12 @@ server {
     listen 8080;
     server_name https://71d2-59-15-64-225.ngrok-free.app;
 
+    location /deploy {
+        proxy_pass http://webhook:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
