--- a/react-frontend/.env.production
+++ b/react-frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://71d2-59-15-64-225.ngrok-free.app
-VITE_WS_URL=wss://71d2-59-15-64-225.ngrok-free.app
+VITE_API_URL=https://149c-59-15-64-225.ngrok-free.app
+VITE_WS_URL=wss://149c-59-15-64-225.ngrok-free.app
