--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    server_name https://149c-59-15-64-225.ngrok-free.app;
+    server_name https://dfc2-59-15-64-225.ngrok-free.app;
 
     location /deploy {
         proxy_pass http://webhook:9000;
