Implement dynamic ngrok URL update
- modified update_file function to allow only domain names in ALLOWED_HOSTS

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,6 @@
 server {
     listen 8080;
-    server_name https://dfc2-59-15-64-225.ngrok-free.app;
-
-    location /deploy {
-        proxy_pass http://webhook:9000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+    server_name https://c671-59-15-64-225.ngrok-free.app;
 
     location / {
         root /usr/share/nginx/html;
