--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    server_name https://c671-59-15-64-225.ngrok-free.app;
+    server_name https://fd8c-59-15-64-225.ngrok-free.app;
 
     location / {
         root /usr/share/nginx/html;
