--- a/react-frontend/.env.production
+++ b/react-frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://fd8c-59-15-64-225.ngrok-free.app
-VITE_WS_URL=wss://fd8c-59-15-64-225.ngrok-free.app
+VITE_API_URL=https://da6a-218-154-40-110.ngrok-free.app
+VITE_WS_URL=wss://da6a-218-154-40-110.ngrok-free.app
