--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    server_name https://16fa-218-154-40-110.ngrok-free.app;
+    server_name https://6bdc-59-15-64-225.ngrok-free.app;
 
     location / {
         root /usr/share/nginx/html;
